# XTCHESS

./: .gitignore  LICENSE  README.md  login_ifknot.sh  setup_ifknot.sh
src/: CMakeLists.txt  chess_ideas.txt  cmk.sh  main.c
src/BIOS/: bios_timer_io_services.c  bios_video_services.c  bios_video_services.h  bios_video_services_constants.h  bios_video_services_types.h  test_bios.h
src/CHESS/: test_chess.h  xt_bitboard.c  xt_bitboard.h  xt_constants.h  xt_types.h
src/DOS/: dos_services.c  dos_services_files.c  dos_services_files.h  dos_services_files_types.h  test_dos_services.h
src/MDA/: ascii_control_codes.h  cp437_constants.h  mda_attributes.h  mda_constants.h  mda_context.c  mda_context.h  mda_mouse.h  mda_types.h  mda_widget.c  mda_widget.h  mda_widget_border.c  mda_widget_border.h  mda_widget_rtti.c  mda_widget_rtti.h  mda_widget_uid.c  mda_widgets.c  mda_widgets.h  mda_widgets_rtti.h  mda_widgets_types.h  mda_widgets_uid.c  mda_widgets_uid.h  test_mda_context.h
src/MDA/WIDGET/: mda_widget_border.h  mda_widget_composite.c  mda_widget_composite.h  mda_widget_constants.h  mda_widget_panel.h  mda_widget_types.h
src/MEM/: mem_arena.c  mem_arena.h  mem_constants.h  mem_tools.c  mem_tools.h  mem_types.h  test_mem_arena.h  test_mem_tools.h
src/TDD/: tdd_constants.h  tdd_graphs.h  tdd_macros.h  tdd_on_escape.h  tdd_progress.c  tdd_progress.h  tdd_report.c  tdd_report.h  tdd_spinner.c  tdd_spinner.h  tdd_types.h  tdd_variadic.h  test_tdd_framework.h  test_tdd_spinners.h
